test/assets/route-types/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
spec:
  rules:
  - host: service-unsecure-test.example.com
    http:
      paths:
      - backend:
          service:
            name: service-unsecure
            port:
              number: 27017
        path: "/"
        pathType: Prefix
