test/assets/route-types/web-server-deploy.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: web-server-deploy
    labels:
      app: web-server-deploy
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: web-server-deploy
    template:
      metadata:
        labels:
          name: web-server-deploy
      spec:
        automountServiceAccountToken: false
        containers:
        - name: nginx
          image: quay.io/microshift/hello-world:latest
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 8443
            name: https
            protocol: TCP
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      name: service-secure
    name: service-secure
  spec:
    ports:
    - name: https
      protocol: TCP
      port: 27443
      targetPort: 8443
    selector:
      name: web-server-deploy
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecure
    name: service-unsecure
  spec:
    ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-deploy
